@@ -796,6 +796,11 @@ progress {
  height:24px;
 }
 
+.player-settings-list-checkbox {
+ margin-left:16px;
+ height:24px;
+}
+
 .switch-label {
  cursor:pointer;
  margin-right:8px;
