@@ -5,6 +5,7 @@
 3. Search for podcasts via iTunes or GPodder, and add to podcast subscriptions.
 4. Add action to remove podcasts.
 5. Add action to add podcast via URL.
+6. Add configuration of browse-modes to player settings.
 
 1.0.1
 -----
